(fix) slide out: added z-index

--- a/src/styles/components/_offcanvas.scss
+++ b/src/styles/components/_offcanvas.scss
@@ -4,6 +4,7 @@ body {
 
 .viewer-content {
   width: 50%;
+  z-index: 1006; // since reveal-overlay is 1005
 }
 
 .frame-content {
